# gkey-svn

trunk/: ChangeLog  Makefile  Makefile.am  Makefile.in  README  TODO  aclocal.m4  config.h  config.h.in  config.status  configure  configure.in  gkey-sample.xml  libtool
trunk/autom4te.cache/: output.0  traces.0
trunk/debian/: changelog  control  copyright  files  gkey.substvars
trunk/src/: Makefile  Makefile.am  Makefile.in  config-parser.c  gkey  gkey-action.c  gkey-action.h  gkey-activator.c  gkey-activator.h  gkey-binding.c  gkey-binding.h  gkey-mousemover.c  gkey-mousemover.h  gkey.c
trunk/src/.deps/: callbacks.P  config-parser.P  eggaccelerators.P  gkey-action.P  gkey-activator.P  gkey-binding.P  gkey-mousemover.P  gkey.P  interface.P  main.P  support.P
